--- a/css/app.css
+++ b/css/app.css
@@ -1,169 +1,63 @@
-*{
-  box-sizing: border-box;
-}
+
 html, body{
   height: 100%;
 }
-html{
-  background: #333333;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #dd1818, #333333);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #dd1818, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-body{
+
+/*Layout Screen*/
+#splashScreen{
+  background: #3C3B3F;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #605C3C, #3C3B3F);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #605C3C, #3C3B3F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 0;
-  flex-direction: column;
+  justify-content: center;
+  z-index: 2;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
 }
-#normal {
+/*Splash Screen END*/
+#splashScreen:before{
+  animation: splashScreenAnimation 2.5s both;
+  background: url(../img/Logo.png) no-repeat center;
+  content: '';
   display: block;
+  height: 33.333333333%;
+  width: 33.333333333%;
 }
-.login{
-  background: #ecf0f1;
-  width: 320px;
-  padding: 20px;
-  border-radius: 8px;
-}
-.login input {
-  display: block;
+/*Landing page*/
+video {
+  object-fit: cover;
+  height: 100vh;
   width: 100%;
-  height: 40px;
-  padding: 0 10px;
-  width: 100%;
-}
-.login input[type="submit"]{
-
-  background: #00b09b;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #fff;
-  transition: background-color .500s ease-in-out;
-
-}
-.login h3{
-  margin: 0 auto 10px;
-}
-.login input[type=submit]:hover{
-  background: #16a005;
-}
-.register {
-  text-align: center;
-  display: block;
-  background: #ecf0f1;
-  padding-top: 20px;
-  width: 100%;
-  border-radius: 8px;
-}
-.alert{
-  font-family: sans-serif;
-  font-size: 20px;
-  color: white;
-  text-align: center;
-  width: 320px;
-  padding-top: 20px;
-  background: Red;
-  height: 60px;
-  margin-top: 100px;
-  border-radius: 20px;
+  z-index: -1;
+  position: fixed;
+  bottom: 0;
+  left:  0;
+  right: 0;
+  top: 0;
 }
 
-.heading{
-	width: 50%;
-	margin: 30px auto;
-  margin-top: 300px;
-  padding: 10px;
-	text-align: center;
-	color: 	#fff;
-	background: #242424;
-	border: none;
-	border-radius: 20px;
-}
-.input_form{
-	width: 50%;
-	margin: 30px auto;
-	border-radius: 5px;
-	padding: 10px;
-	background: #242424;
-}
-form p {
-	color: red;
-	margin: 0px;
-}
-.task_input {
-	width: 75%;
-	height: 15px;
-	padding: 10px;
-	border: 2px solid #fff;
-}
-.add_btn {
-	height: 39px;
-	background: #242424;
-	color: 	#fff;
-	border: 2px solid #fff;
-	border-radius: 5px;
-	padding: 5px 20px;
+main {
+  width: 520px;
 }
 
-table {
-    width: 50%;
-    margin: 30px auto;
-    border-collapse: collapse;
+/*Animations*/
+@keyframes splashScreenAnimation{
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+  75% {
+    opacity: 1;
+    transform: none;
+  }
+  to {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
 }
-
-tr {
-	border-bottom: 1px solid #fff;
-}
-
-th {
-	font-size: 19px;
-	color: #6B8E23;
-}
-
-th, td{
-	border: none;
-    height: 30px;
-    padding: 2px;
-}
-
-tr:hover {
-	background: #E9E9E9;
-}
-
-.task {
-	text-align: left;
-}
-
-.delete{
-	text-align: center;
-}
-.delete a{
-	color: white;
-	background: #a52a2a;
-	padding: 1px 6px;
-	border-radius: 3px;
-	text-decoration: none;
-}
-
-nav{
-  background: #242424;
-  color: #fff;
-  height: 80px;
-  line-height: 80px;
-  padding: 0 20px;
-  position: relative;
-  text-align: center;
-}
-
-nav h1{
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-nav a{
-  color: #ddd;
-  float: right;
-}
+/*Animation END*/
